[gd_scene load_steps=3 format=3 uid="uid://0ac3g2o0u2xh"]

[ext_resource type="Script" uid="uid://cetepvp7fnjqd" path="res://Stages/Menus/PauseMenu/pause_menu.gd" id="1_q3fvx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3fvx"]
bg_color = Color(0, 0, 0, 0.49803922)

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_q3fvx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q3fvx")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 100.0
offset_right = 361.0
offset_bottom = 201.0
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="LevelSelectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
